--- a/Algorithm/Algorithm.csproj
+++ b/Algorithm/Algorithm.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dijkstra.NET" Version="1.1.0" />
+  </ItemGroup>
+
 </Project>
